background image added on ping pong

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <script
 			  src="https://code.jquery.com/jquery-3.3.1.js"
 			  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -14,7 +14,27 @@
 
 
   <body>
-    <h1 class="center">Ping-Pong</h1>
+    <div class="ping">
+      <div class="pong">
+    <h1>Ping-Pong</h1>
+  </div>
+  </div>
+
+
+<div class="float">
+  <div class="container">
+    <div class="jumbotron">
+      <h2>About Ping Pong</h2>
+      <ul>
+        <ol>Created by:</ol>
+        <p>thee trippler</p>
+        <ol>GitHUb Username</ol>
+        <p>erick</p>
+        <ol>Java Test</ol>
+      </ul>
+    </div>
+  </div>
+
 
   </body>
 </html>
