jumbotron removed backgroung colour added

--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
   </div>
 
 
-<div class="float">
   <div class="container">
-    <div class="jumbotron">
-      <h2>About Ping Pong</h2>
+    <div class="float">
+
+      <h2>About Ping- Pong</h2>
       <ul>
         <ol>Created by:</ol>
         <p>thee trippler</p>
-        <ol>GitHUb Username</ol>
+        <ol>GitHub Username</ol>
         <p>erick</p>
         <ol>Java Test</ol>
       </ul>
-    </div>
   </div>
 </div>
 
