--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
   </div>
 </div>
 
+<div class="container">
+  <h3>Let's play!</h3>
+  <p>Rules:</p>
+<p>Ping Pong will count up to your number from 1
+  with the following expectations</p>
+  <p>1. Number divisible by 3 become "ping"</p>
+    <p>1. Number divisible by 5 become "pong"</p>
+      <p>1. Number divisible by 3 and 5 become "ping" "pong"</p>
+
 
   </body>
 </html>
