row and two columns created

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 
   <div class="container">
-    <div class="float">
-
+      <div class="rows">
+<div class="col-md-6">
+      <div class="float">
       <h2>About Ping- Pong</h2>
       <ul>
         <ol>Created by:</ol>
@@ -34,15 +35,16 @@
       </ul>
   </div>
 </div>
-
-<div class="container">
+<div class="col-md-6">
   <h3>Let's play!</h3>
   <p>Rules:</p>
 <p>Ping Pong will count up to your number from 1
   with the following expectations</p>
   <p>1. Number divisible by 3 become "ping"</p>
-    <p>1. Number divisible by 5 become "pong"</p>
-      <p>1. Number divisible by 3 and 5 become "ping" "pong"</p>
+    <p>2. Number divisible by 5 become "pong"</p>
+      <p>3. Number divisible by 3 and 5 become "ping" "pong"</p>
+    </div>
+  </div>
 
 
   </body>
