--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
   <p>1. Number divisible by 3 become "ping"</p>
     <p>2. Number divisible by 5 become "pong"</p>
       <p>3. Number divisible by 3 and 5 become "ping" "pong"</p>
+      <form>
+      <lable for="number">Enter your number here</lable>
+      <input id="number" class="form-control" type="text">
+      <button type="submit" class="btn">SUBMIT!</button>
+    </form>
     </div>
   </div>
 
