jquary function added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   </div>
 
 
-  <div class="container">
       <div class="rows">
 <div class="col-md-6">
       <div class="float">
@@ -43,10 +42,10 @@
   <p>1. Number divisible by 3 become "ping"</p>
     <p>2. Number divisible by 5 become "pong"</p>
       <p>3. Number divisible by 3 and 5 become "ping" "pong"</p>
-      <form>
+      <form id="ping-pong">
       <lable for="number">Enter your number here</lable>
       <input id="number" class="form-control" type="text">
-      <button type="submit" class="btn">SUBMIT!</button>
+      <button type="submit" class="btn">PING PONG!</button>
     </form>
     </div>
   </div>
