--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   </head>
 
 
-  <body>
+  <body class="ball">
     <div class="ping">
       <div class="pong">
-    <h1>Ping-Pong</h1>
+    <h1 class="margin">Ping-Pong</h1>
   </div>
   </div>
 
@@ -34,6 +34,7 @@
       </ul>
   </div>
 </div>
+<div class="down">
 <div class="col-md-6">
   <h3>Let's play!</h3>
   <p>Rules:</p>
@@ -49,6 +50,7 @@
     </form>
     </div>
   </div>
+</div>
 
 
   </body>
