moving enjoy click

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <body class="ball">
     <div class="ping">
       <div class="pong">
-    <h1 class="margin">Ping-Pong</h1>
+     <h1 class="margin">PING-PONG</h1>
+    <marquee> <p class="enjoy">ENJOY PLAYING</p>  </marquee>
   </div>
   </div>
 
