--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <script
-			  src="https://code.jquery.com/jquery-3.3.1.js"
-			  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-			  crossorigin="anonymous"></script>
+          <link href="css/styles.css" rel="stylesheet" type="text/css">
+          <script   src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
           <script src="js/scripts.js"></script>
-    <meta charset="utf-8">
     <title>ping pong</title>
   </head>
 
@@ -28,16 +24,16 @@
       <h2>About Ping- Pong</h2>
       <ul>
         <ol>Created by:</ol>
-        <p>thee trippler</p>
+        <p>Thee trippler</p>
         <ol>GitHub Username</ol>
-        <p>erick</p>
+        <p>Erick</p>
         <ol>Java Test</ol>
       </ul>
   </div>
 </div>
 <div class="down">
 <div class="col-md-6">
-  <h3>Let's play!</h3>
+  <h3 class="h3">Let's play!</h3>
   <p>Rules:</p>
 <p>Ping Pong will count up to your number from 1
   with the following expectations</p>
@@ -45,7 +41,7 @@
     <p>2. Number divisible by 5 become "pong"</p>
       <p>3. Number divisible by 3 and 5 become "ping" "pong"</p>
       <form id="ping-pong">
-      <lable for="number">Enter your number here</lable>
+      <lable class="h3" for="number">Enter your number here</lable>
       <input id="number" class="form-control" type="text">
       <button type="submit" class="btn">PING PONG!</button>
     </form>
